examples/toystore/crc/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: toystore
spec:
  host: toystore.apps-crc.testing
  to:
    kind: Service
    name: kuadrant-ingressgateway-istio
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
